update ejercicios variables

--- a/ejercicios pair variables .ipynb
+++ b/ejercicios pair variables .ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#definimos los valores de las variables numeros\n",
+    "#(1)definimos los valores de las variables numeros\n",
     "numero1 = 20\n",
     "numero2 = 10\n",
     "numero3 = 30"
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#definimos los valores de las variables alturas\n",
+    "#(2)definimos los valores de las variables alturas\n",
     "altura1 = 1.70\n",
     "altura2 = 1.54"
    ]
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
     }
    ],
    "source": [
-    "#le pido el nombre completo\n",
+    "#(3)le pido el nombre completo\n",
     "nombre = input ('Cual es tu nombre?')\n",
     "apellido = input(\"Cual es tu apellido?\")\n",
     "nombre_completo = nombre + ' ' + apellido\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -273,14 +273,14 @@
     }
    ],
    "source": [
-    "#pregunte al usuario por una frase, almacenad este resultado en una variable\n",
+    "#(4-A)pregunte al usuario por una frase, almacenad este resultado en una variable\n",
     "frase = input ('Dinos tu frase preferida')\n",
     "print(frase)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -292,14 +292,14 @@
     }
    ],
    "source": [
-    "#pregunte al usuario por una vocal, almacenad este resultado en una variable.\n",
+    "#p(4B)regunte al usuario por una vocal, almacenad este resultado en una variable.\n",
     "vocal = input ('Dinos una vocal de la frase')\n",
     "print(vocal)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -311,14 +311,14 @@
     }
    ],
    "source": [
-    "#la misma frase pero con la vocal introducida en mayúsulas\n",
+    "#l(4c)a misma frase pero con la vocal introducida en mayúsulas\n",
     "frase_modificada = frase.replace(vocal, vocal.upper())\n",
     "print (frase_modificada)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
     }
    ],
    "source": [
-    "#pregunte al usuario por la lista de la compra, separando cada elemento por comas.\n",
+    "#(5a)pregunte al usuario por la lista de la compra, separando cada elemento por comas.\n",
     "compras = input ('Que cosas necesitas comprar en el supermercado? - por favor separa los elementos con comas')\n",
     "#Separo el listado con comas\n",
     "compras_con_comas = compras.split(',')\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
     }
    ],
    "source": [
-    "#Devolved la lista de compra donde veamos cada elemento en una línea.\n",
+    "#(5b)Devolved la lista de compra donde veamos cada elemento en una línea.\n",
     "lista_compras = \"\\n\".join(compras_con_comas)\n",
     "print(lista_compras)"
    ]
