juego piedra papel tijeras

--- a/ejercicios pair listas y tupas .ipynb
+++ b/ejercicios pair listas y tupas .ipynb
@@ -410,13 +410,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tupla concatenada: (50, 100, 500, 1000, 2000, 10, 30, 70, 300, 700)\n"
+     ]
+    }
+   ],
    "source": [
     "#4-Concatenar dos tuplas\n",
     "tupla1 = (50, 100, 500, 1000, 2000)\n",
-    "tupla2 = (10,30,70,300,700)\n"
+    "tupla2 = (10,30,70,300,700)\n",
+    "tupla_concatenada = tupla1 + tupla2\n",
+    "print(\"Tupla concatenada:\", tupla_concatenada)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El índice de 30 es: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5-Encontrar el índice de un elemento en una tupla\n",
+    "indice = tupla_concatenada.index(100)\n",
+    "print(\"El índice de 30 es:\", indice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor 1000 aparece 1 veces en la tupla.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#6-Contar ocurrencias de un elemento en una tupla\n",
+    "valor_objetivo = 1000\n",
+    "conteo = tupla_concatenada.count(valor_objetivo)\n",
+    "print(f\"El valor {valor_objetivo} aparece {conteo} veces en la tupla.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "subtuple de una tupla: (100, 500)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#7-Obtener una subtuple de una tupla\n",
+    "tupla_concatenada = tupla1 + tupla2\n",
+    "subtupla = tupla_concatenada[1:3]\n",
+    "print(\"subtuple de una tupla:\", subtupla)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tupla invertida: (700, 300, 70, 30, 10, 2000, 1000, 500, 100, 50)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#8-Invertir una tupla\n",
+    "tupla_invertida = tupla_concatenada[::-1]\n",
+    "print(\"Tupla invertida:\", tupla_invertida)"
    ]
   }
  ],
