ejercicios pair clases

--- a/ejercicios diccionarios y sets .ipynb
+++ b/ejercicios diccionarios y sets .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,23 +12,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#crear el diccionario monarcasmonarcas = {\"Bélgica\" : \"Philippe\", \"Dinamarca\": \"Margrethe II\", \"Holanda\": \"Beatrix\", \"Noruega\": \"Harald V\", \"España\": \"Felipe VI\", \"Reino Unido\": \"Carlos III\"}\n"
+    "#crear el diccionario monarcas\n",
+    "monarcas = {\"Bélgica\" : \"Philippe\", \"Dinamarca\": \"Margrethe II\", \"Holanda\": \"Beatrix\", \"Noruega\": \"Harald V\", \"España\": \"Felipe VI\", \"Reino Unido\": \"Carlos III\"}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "¿Qué festivo hay el 15/04? 3.75\n"
+      "¿Qué festivo hay el 15/04? 15/4\n"
      ]
     }
    ],
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El diccionario tiene 7 países.\n"
+      "El diccionario tiene 6 países.\n"
      ]
     }
    ],
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +96,7 @@
        "False"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +117,7 @@
        "False"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Bélgica', 'Dinamarca', 'Holanda', 'Noruega', 'España', 'Reino Unido', 'Luxemburgo']\n"
+      "['Bélgica', 'Dinamarca', 'Holanda', 'Noruega', 'España', 'Reino Unido']\n"
      ]
     }
    ],
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -166,14 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Año Nuevo': 1.0, 'Epifanía del Señor': 6.0, 'Viernes Santo': 3.75, 'Asunción de la Virgen': 1.875, 'Fiesta Nacional de España': 1.2, 'Todos los Santos': 0.09090909090909091, 'Día de la Constitución Española': 0.5, 'Inmaculada Concepción': 0.6666666666666666, 'Holanda': 'Willem-Alexander'}\n"
+      "{'Año Nuevo': '1/1', 'Epifanía del Señor': '6/1', 'Viernes Santo': '15/4', 'Asunción de la Virgen': '15/8', 'Fiesta Nacional de España': '12/10', 'Todos los Santos': '1/11', 'Día de la Constitución Española': '6/12', 'Inmaculada Concepción': '8/12', 'Holanda': 'Willem-Alexander'}\n"
      ]
     }
    ],
@@ -184,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Año Nuevo', '1/1'), ('Epifanía del Señor', '6/1'), ('Viernes Santo', '15/4'), ('Asunción de la Virgen', '15/8'), ('Fiesta Nacional de España', '12/10'), ('Todos los Santos', '1/11'), ('Día de la Constitución Española', '6/12'), ('Inmaculada Concepción', '8/12')]\n"
+      "[('Año Nuevo', '1/1'), ('Epifanía del Señor', '6/1'), ('Viernes Santo', '15/4'), ('Asunción de la Virgen', '15/8'), ('Fiesta Nacional de España', '12/10'), ('Todos los Santos', '1/11'), ('Día de la Constitución Española', '6/12'), ('Inmaculada Concepción', '8/12'), ('Holanda', 'Willem-Alexander')]\n"
      ]
     }
    ],
@@ -203,14 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Bélgica': 'Philippe', 'Dinamarca': 'Margrethe II', 'Holanda': 'Beatrix', 'Noruega': 'Harald V', 'España': 'Felipe VI', 'Reino Unido': 'Carlos III', 'Luxemburgo': 'Henri'}\n"
+      "{'Bélgica': 'Philippe', 'Dinamarca': 'Margrethe II', 'Holanda': 'Beatrix', 'Noruega': 'Harald V', 'España': 'Felipe VI', 'Reino Unido': 'Carlos III'}\n"
      ]
     }
    ],
@@ -222,26 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Bélgica': 'Philippe', 'Dinamarca': 'Margrethe II', 'Holanda': 'Beatrix', 'Noruega': 'Harald V', 'Reino Unido': 'Carlos III', 'Luxemburgo': 'Henri'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Quita España de monarcas2010.\n",
-    "monarcas2010.pop(\"España\", \"Felipe VI\")\n",
-    "print(monarcas2010)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -253,6 +235,25 @@
     }
    ],
    "source": [
+    "#Quita España de monarcas2010.\n",
+    "monarcas2010.pop(\"España\", \"Felipe VI\")\n",
+    "print(monarcas2010)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Bélgica': 'Philippe', 'Dinamarca': 'Margrethe II', 'Holanda': 'Beatrix', 'Noruega': 'Harald V'}\n"
+     ]
+    }
+   ],
+   "source": [
     "#Quita el último elemento de monarcas2010\n",
     "monarcas2010.popitem()\n",
     "print(monarcas2010)"
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
